--- a/about.html
+++ b/about.html
@@ -18,25 +18,18 @@
   <!-- Custom styles for this template -->
   <link href="css/modern-business.css" rel="stylesheet">
 
-  <link rel="alternate stylesheet" href="css/contraste.css" title="alto_contraste"/>        
-        <style type="text/css">
-        #footer-brasil {
-          background: none repeat scroll 0% 0% #00420c;
-          padding: 1em 0px;
-          max-width: 100%;
+  <link rel="alternate stylesheet" href="css/contraste.css" title="alto_contraste"/>
+  <script type="text/javascript">
+    function alto_contraste(title) {
+      var i, a;
+      for(i=0; (a = document.getElementsByTagName("link")[i]); i++) {
+        if(a.getAttribute("rel").indexOf("style") != -1 && a.getAttribute("title")) {
+          a.disabled = true;
+          if(a.getAttribute("title") == title) a.disabled = false;
         }
-        </style>
-        <script type="text/javascript">
-            function alto_contraste(title) {
-                var i, a;
-                for(i=0; (a = document.getElementsByTagName("link")[i]); i++) {
-                    if(a.getAttribute("rel").indexOf("style") != -1 && a.getAttribute("title")) {
-                    a.disabled = true;
-                    if(a.getAttribute("title") == title) a.disabled = false;
-                    }
-                }
-            }
-        </script>
+      }
+    }
+  </script>
   
 </head>
 
@@ -100,8 +93,8 @@
               <li>
                 <a href="#" class="nav-link" data-toggle="tooltip" data-placement="bottom" title="Em Breve!"><img src="img/flagespanha.png"></a>
               </li>
-              <li><a href="#" class="iacessibilidade" onclick="alto_contraste('','1')">Contraste Normal</a></li>
-              <li><a href="#" class="iautocontraste" onclick="alto_contraste('alto_contraste','1')">Alto Contraste</a></li>      
+<!--               <li><a href="#" class="acessibilidade" onclick="alto_contraste('','1')"><img src="img/contrast-icon.png" alt="" width="45" height="45"></a></li>
+              <li><a href="#" class="iautocontraste" onclick="alto_contraste('alto_contraste','1')"><img src="img/contrast-icon.png" alt="" width="45" height="45" title="Alto Contraste"></a></li> -->
             </ul>
           </div>
         </div>
@@ -162,116 +155,116 @@
 
               <p>A TerraMA² provê serviços para busca de dados atuais através da internet e sua incorporação à base de dados do sistema de alerta;</p> 
               <p>Serviços para tratar/analisar em tempo real dados novos e verificar se uma situação de risco existe, através de uma comparação com mapas de risco ou de um modelo definido;</p>
-              Serviços para executar/editar/criar novos modelos de risco e alerta; serviços para criação e notificação de alerta para os usuários do sistema em operação entre outros serviços básicos e avançados.</p>
-              <p>A operação do sistema de alerta requer o acesso a dados atuais de observação e previsão, além de mapas de risco das áreas observadas ou de modelos matemáticos que definam os riscos.</p> 
-              <p><b>Operadores do Sistema:</b> Os operadores do sistema são organizações que monitoram a possibilidade de ocorrência do desastres.</p> 
-              <p><b>Clientes dos Alertas:</b> Os clientes dos alertas do sistema são os agentes que tem a competência para executar as ações preventivas para a diminuição de perdas no caso da ocorrência do desastre.</p>
-            </div>
-          </div>
-
-          <div class="col-lg-12">
-            <h3>Base de Dados</h3>
-            <ul>
-              <li>Dados dinâmicos - informam sobre a condição de variáveis obtidas em intervalos de tempo pré-determinados.</li>
-              <li>Dados estáticos - contêm informações sobre as pré-condições necessárias para a ocorrência de um desastre. Sua atualização deve ser realizada sempre que uma pré-condição é alterada ou quando o modelo de ocorrência do desastre é atualizado.</li>
-              <li>Dados adicionais - outras informações que auxiliem a localização das áreas de risco e das populações ou equipamentos vulneráveis ao desastre analisado.</li>
-            </ul>
+            Serviços para executar/editar/criar novos modelos de risco e alerta; serviços para criação e notificação de alerta para os usuários do sistema em operação entre outros serviços básicos e avançados.</p>
+            <p>A operação do sistema de alerta requer o acesso a dados atuais de observação e previsão, além de mapas de risco das áreas observadas ou de modelos matemáticos que definam os riscos.</p> 
+            <p><b>Operadores do Sistema:</b> Os operadores do sistema são organizações que monitoram a possibilidade de ocorrência do desastres.</p> 
+            <p><b>Clientes dos Alertas:</b> Os clientes dos alertas do sistema são os agentes que tem a competência para executar as ações preventivas para a diminuição de perdas no caso da ocorrência do desastre.</p>
           </div>
         </div>
-        <!-- /.row -->
+
+        <div class="col-lg-12">
+          <h3>Base de Dados</h3>
+          <ul>
+            <li>Dados dinâmicos - informam sobre a condição de variáveis obtidas em intervalos de tempo pré-determinados.</li>
+            <li>Dados estáticos - contêm informações sobre as pré-condições necessárias para a ocorrência de um desastre. Sua atualização deve ser realizada sempre que uma pré-condição é alterada ou quando o modelo de ocorrência do desastre é atualizado.</li>
+            <li>Dados adicionais - outras informações que auxiliem a localização das áreas de risco e das populações ou equipamentos vulneráveis ao desastre analisado.</li>
+          </ul>
+        </div>
       </div>
-      <!-- /.Container -->
+      <!-- /.row -->
+    </div>
+    <!-- /.Container -->
 
-      <!-- Footer -->
-      <footer class="mainfooter">
-        <div class="footer-top p-y-2">
-          <div class="container-fluid">
-
-          </div>
-        </div>
-        <div class="footer-middle">
-          <div class="container">
-            <div class="row">
-
-              <div class="col-6 col-md-4">
-                <!--Column1-->
-                <div class="footer-pad">
-                  <h4>Sobre</h4>
-                  <ul class="list-unstyled">
-                    <li><a href="#"></a></li>
-                    <li><a href="about.html">TerraMA²</a></li>
-                    <li><a href="team.html">Equipe</a></li>
-                    <li><a href="architecture.html">Arquitetura</a></li>
-                    <li><a href="contact.html">Contato</a></li>
-                  </ul>
-                </div>
-              </div>
-              <div class="col-6 col-md-4">
-                <!--Column1-->
-                <div class="footer-pad">
-                  <h4>Projetos</h4>
-                  <ul class="list-unstyled">
-                    <li><a href="#"></a></li>
-                    <li><a href="projects.html">Projetos</a></li>
-                    <li><a href="#" data-toggle="tooltip" data-placement="left" title="Em Breve!">Estudos de Caso</a></li>
-                  </ul>
-                </div>
-
-                <div class="footer-pad">
-                  <ul class="list-unstyled">
-                    <li><a href="#"></a></li>
-                    <li><a href="download.html">Download</a></li>
-                    <li><a href="documentation.html">Documentação</a></li>
-                    <li><a href="#" data-toggle="tooltip" data-placement="left" title="Em Breve!">Cursos</a></li>
-                  </ul>
-                </div>
-              </div>
-              <div class="col-6 col-md-4">
-                <!--Column1-->
-                <div class="footer-pad">
-                  <h4>Endereço</h4>
-
-                  <p>Avenida dos Astronautas, 1.758 Jardim da Granja CEP: 12227 010 São José dos Campos - SP</p>
-                </div>
-                <div class="footer-pad">
-                  <div class="mx-auto" style="width: 200px;">
-                    <a href="http://www.inpe.br/" target="_blank"><img src="img/logo-inpe.png" width="50" height="40" class="rounded mx-auto d-block" alt=""></a>
-                  </div>
-                </div>
-              </div>
-            </div> 
-          </div>
+    <!-- Footer -->
+    <footer class="mainfooter">
+      <div class="footer-top p-y-2">
+        <div class="container-fluid">
 
         </div>
-        <div class="footer-bottom">
-          <div class="container">
-            <div class="row">
-              <div class="col-xs-12">
-                <!--Footer Bottom-->
-                <p>&copy; Copyright 2017 TerraMA².  All rights reserved.</p>
+      </div>
+      <div class="footer-middle">
+        <div class="container">
+          <div class="row">
 
+            <div class="col-6 col-md-4">
+              <!--Column1-->
+              <div class="footer-pad">
+                <h4>Sobre</h4>
+                <ul class="list-unstyled">
+                  <li><a href="#"></a></li>
+                  <li><a href="about.html">TerraMA²</a></li>
+                  <li><a href="team.html">Equipe</a></li>
+                  <li><a href="architecture.html">Arquitetura</a></li>
+                  <li><a href="contact.html">Contato</a></li>
+                </ul>
               </div>
+            </div>
+            <div class="col-6 col-md-4">
+              <!--Column1-->
+              <div class="footer-pad">
+                <h4>Projetos</h4>
+                <ul class="list-unstyled">
+                  <li><a href="#"></a></li>
+                  <li><a href="projects.html">Projetos</a></li>
+                  <li><a href="#" data-toggle="tooltip" data-placement="left" title="Em Breve!">Estudos de Caso</a></li>
+                </ul>
+              </div>
+
+              <div class="footer-pad">
+                <ul class="list-unstyled">
+                  <li><a href="#"></a></li>
+                  <li><a href="download.html">Download</a></li>
+                  <li><a href="documentation.html">Documentação</a></li>
+                  <li><a href="#" data-toggle="tooltip" data-placement="left" title="Em Breve!">Cursos</a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-6 col-md-4">
+              <!--Column1-->
+              <div class="footer-pad">
+                <h4>Endereço</h4>
+
+                <p>Avenida dos Astronautas, 1.758 Jardim da Granja CEP: 12227 010 São José dos Campos - SP</p>
+              </div>
+              <div class="footer-pad">
+                <div class="mx-auto" style="width: 200px;">
+                  <a href="http://www.inpe.br/" target="_blank"><img src="img/logo-inpe.png" width="50" height="40" class="rounded mx-auto d-block" alt=""></a>
+                </div>
+              </div>
+            </div>
+          </div> 
+        </div>
+
+      </div>
+      <div class="footer-bottom">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12">
+              <!--Footer Bottom-->
+              <p>&copy; Copyright 2017 TerraMA².  All rights reserved.</p>
+
             </div>
           </div>
         </div>
-      </footer>
-      <!-- /.Footer -->
+      </div>
+    </footer>
+    <!-- /.Footer -->
 
-      <!-- Gov -->
-      <script defer="defer" src="//barra.brasil.gov.br/barra.js" type="text/javascript"></script>
-      <!-- /.Gov -->
+    <!-- Gov -->
+    <script defer="defer" src="//barra.brasil.gov.br/barra.js" type="text/javascript"></script>
+    <!-- /.Gov -->
 
-      <!-- Bootstrap core JavaScript -->
-      <script src="vendor/jquery/jquery.min.js"></script>
-      <script src="vendor/popper/popper.min.js"></script>
-      <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/popper/popper.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
 
-      <!-- Script tooltip -->
-      <script>
-        $(document).ready(function(){
-          $('[data-toggle="tooltip"]').tooltip();   
-        });
-      </script>
+    <!-- Script tooltip -->
+    <script>
+      $(document).ready(function(){
+        $('[data-toggle="tooltip"]').tooltip();   
+      });
+    </script>
 
-    </body>
-    </html>
+  </body>
+  </html>
