--- a/about.html
+++ b/about.html
@@ -93,8 +93,8 @@
               <li>
                 <a href="#" class="nav-link" data-toggle="tooltip" data-placement="bottom" title="Em Breve!"><img src="img/flagespanha.png"></a>
               </li>
-<!--               <li><a href="#" class="acessibilidade" onclick="alto_contraste('','1')"><img src="img/contrast-icon.png" alt="" width="45" height="45"></a></li>
-              <li><a href="#" class="iautocontraste" onclick="alto_contraste('alto_contraste','1')"><img src="img/contrast-icon.png" alt="" width="45" height="45" title="Alto Contraste"></a></li> -->
+              <li><a href="#" class="acessibilidade" onclick="alto_contraste('','1')"><img src="img/contrast-icon.png" alt="" width="45" height="45"></a></li>
+              <li><a href="#" class="iautocontraste" onclick="alto_contraste('alto_contraste','1')"><img src="img/contrast-icon.png" alt="" width="45" height="45" title="Alto Contraste"></a></li>
             </ul>
           </div>
         </div>
