adjusting padding: 4px

--- a/i18n.html
+++ b/i18n.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 
-	<div id="wordl">Internacionalização</div>
+	<div id="world">Internacionalização</div>
 
 	<script type="text/javascript">
-		var idDoMeuElemento = "wordl";
+		var idDoMeuElemento = "world";
 		var elementoDoDomSelecionado = document.getElementById(idDoMeuElemento);
 
 		// Pega o conteudo que esta dentro da tag que voce selecionou! Com jQuery e mais facil!
