--- a/new-two.html
+++ b/new-two.html
@@ -50,7 +50,7 @@
                 <a class="nav-link dropdown-toggle" href="about.html" id="navbarDropdownAbout" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Sobre
                 </a>
-                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownAbout">
+                <div class="dropdown-menu dropdown-menu-left" aria-labelledby="navbarDropdownAbout">
                   <a class="dropdown-item" href="about.html">TerraMA²</a>
                   <a class="dropdown-item" href="team.html">Equipe</a>
                   <a class="dropdown-item" href="architecture.html">Arquitetura</a>
@@ -61,7 +61,7 @@
                 <a class="nav-link dropdown-toggle" href="about.html" id="navbarDropdownProjects" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Projetos
                 </a>
-                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownAbout">
+                <div class="dropdown-menu dropdown-menu-left" aria-labelledby="navbarDropdownAbout">
                   <a class="dropdown-item" href="projects.html">Projetos</a>
                   <a class="dropdown-item" href="#" data-toggle="tooltip" data-placement="right" title="Em Breve!">Estudos de Casos</a>
                 </div>
