--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="container">
 
           <!-- Logo -->
-          <a href="index.html" title="Home"><img src="img/terrama2_logo_100dpi.png" width="60" height="50" alt="logo terraMa2"></a>
+          <a href="index.html" title="Home"><img src="img/terrama2_logo_100dpi.png" width="60" height="50" alt="logo terraMa²"></a>
 
           <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -49,7 +49,7 @@
                 <a class="nav-link dropdown-toggle" href="about.html" id="navbarDropdownAbout" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Sobre
                 </a>
-                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownAbout">
+                <div class="dropdown-menu dropdown-menu-left" aria-labelledby="navbarDropdownAbout">
                   <a class="dropdown-item" href="about.html">TerraMA²</a>
                   <a class="dropdown-item" href="team.html">Equipe</a>
                   <a class="dropdown-item" href="architecture.html">Arquitetura</a>
@@ -60,7 +60,7 @@
                 <a class="nav-link dropdown-toggle" href="about.html" id="navbarDropdownProjects" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Projetos
                 </a>
-                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownAbout">
+                <div class="dropdown-menu dropdown-menu-left" aria-labelledby="navbarDropdownAbout">
                   <a class="dropdown-item" href="projects.html">Projetos</a>
                   <a class="dropdown-item" href="#" data-toggle="tooltip" data-placement="right" title="Em Breve!">Estudos de Casos</a>
                 </div>
@@ -74,10 +74,10 @@
               <li class="nav-item">
                 <a class="nav-link" href="#" data-toggle="tooltip" data-placement="bottom" title="Em Breve!">Cursos</a>
               </li>
-              <li>
+              <li class="nav-item">
                 <a href="#" class="nav-link" data-toggle="tooltip" data-placement="bottom" title="Em Breve!"><img src="img/flagenglish.png"></a>
               </li>
-              <li>
+              <li class="nav-item">
                 <a href="#" class="nav-link" data-toggle="tooltip" data-placement="bottom" title="Em Breve!"><img src="img/flagespanha.png"></a>
               </li>
             </ul>
@@ -99,7 +99,7 @@
           <div class="carousel-inner" role="listbox">
 
             <div class="carousel-item active">
-              <img class="d-block w-100" src="images/wildfire.png" alt="queimadas">
+              <img class="d-block w-100" src="images/wildfire.png" alt="Queimadas">
               <div class="carousel-caption d-none d-md-block">
                 <!-- <h1>Queimadas</h1> -->
                 <!-- <p>This is a description for the first slide.</p> -->
@@ -107,7 +107,7 @@
             </div>
 
             <div class="carousel-item">
-              <img class="d-block w-100" src="images/storm.png" alt="raios">
+              <img class="d-block w-100" src="images/storm.png" alt="Raios">
               <div class="carousel-caption d-none d-md-block">
                 <!-- <h1>Raios</h1> -->
                 <!--  <p>This is a description for the second slide.</p> -->
@@ -115,7 +115,7 @@
             </div>
 
             <div class="carousel-item">
-              <img class="d-block w-100" src="images/inundation.png" alt="inundações">
+              <img class="d-block w-100" src="images/inundation.png" alt="Inundações">
               <div class="carousel-caption d-none d-md-block">
                 <!-- <h1>Inundações</h1> -->
                 <!-- <p>This is a description for the third slide.</p> -->
@@ -123,7 +123,7 @@
             </div>
 
             <div class="carousel-item">
-              <img class="d-block w-100" src="images/terrama2_v4.png" alt="projeto terraMa²">
+              <img class="d-block w-100" src="images/terrama2_v4.png" alt="Projeto TerraMa²">
               <div class="carousel-caption d-none d-md-block">
                <!--  <h1>Third Slide</h1> -->
                <!-- <p>This is a description for the third slide.</p>--> 
@@ -173,7 +173,7 @@
 
           <div class="col-md-6">
             <figure class="figure">
-              <img src="images/selection_001.png" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
+              <img src="images/selection_001.png" class="figure-img img-fluid rounded" alt="">
               <figcaption class="figure-caption">Aplicação Web TerraMA²</figcaption>
             </figure>
           </div>
