--- a/new-one.html
+++ b/new-one.html
@@ -38,7 +38,7 @@
         <div class="container">
 
           <!-- Logo -->
-          <a href="index.html" title="Home" data-toggle="tooltip" data-placement="right"><img src="img/terrama2_logo_100dpi.png" width="60" height="50" alt="logo terraMa2"></a>
+          <a href="index.html" title="Home" data-toggle="tooltip" data-placement="right"><img src="img/terrama2_logo_100dpi.png" width="60" height="50" alt="logo terraMa²"></a>
 
           <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -50,7 +50,7 @@
                 <a class="nav-link dropdown-toggle" href="about.html" id="navbarDropdownAbout" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Sobre
                 </a>
-                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownAbout">
+                <div class="dropdown-menu dropdown-menu-left" aria-labelledby="navbarDropdownAbout">
                   <a class="dropdown-item" href="about.html">TerraMA²</a>
                   <a class="dropdown-item" href="team.html">Equipe</a>
                   <a class="dropdown-item" href="architecture.html">Arquitetura</a>
@@ -61,7 +61,7 @@
                 <a class="nav-link dropdown-toggle" href="about.html" id="navbarDropdownProjects" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Projetos
                 </a>
-                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownAbout">
+                <div class="dropdown-menu dropdown-menu-left" aria-labelledby="navbarDropdownAbout">
                   <a class="dropdown-item" href="projects.html">Projetos</a>
                   <a class="dropdown-item" href="#" data-toggle="tooltip" data-placement="right" title="Em Breve!">Estudos de Casos</a>
                 </div>
