adding alt attribute

--- a/new-one.html
+++ b/new-one.html
@@ -38,7 +38,7 @@
         <div class="container">
 
           <!-- Logo -->
-          <a href="index.html" title="Home" data-toggle="tooltip" data-placement="right"><img src="img/terrama2_logo_100dpi.png" width="60" height="50" alt="logo terraMa²"></a>
+          <a href="index.html" title="Home" data-toggle="tooltip" data-placement="right"><img src="img/terrama2_logo_100dpi.png" width="60" height="50" alt="logotipo do TerraMa2"></a>
 
           <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -76,10 +76,10 @@
                 <a class="nav-link" href="#" data-toggle="tooltip" data-placement="bottom" title="Em Breve!">Cursos</a>
               </li>
               <li>
-                <a href="#" class="nav-link" data-toggle="tooltip" data-placement="bottom" title="Em Breve!"><img src="img/flagenglish.png"></a>
+                <a href="#" class="nav-link" data-toggle="tooltip" data-placement="bottom" title="Em Breve!"><img src="img/flagenglish.png" alt="bandeira da Inglaterra"></a>
               </li>
               <li>
-                <a href="#" class="nav-link" data-toggle="tooltip" data-placement="bottom" title="Em Breve!"><img src="img/flagespanha.png"></a>
+                <a href="#" class="nav-link" data-toggle="tooltip" data-placement="bottom" title="Em Breve!"><img src="img/flagespanha.png" alt="bandeira da Espanha"></a>
               </li>      
             </ul>
           </div>
@@ -179,7 +179,7 @@
 
           <p>A Figura a seguir mostra como deverá operar a nova versão da plataforma TerraMA², com destaque para as diferentes fontes de dados ambientais, onde a plataforma poderá coletar dados remotamente em outras fontes (instituições) ou se servir de dados localmente disponíveis que foram coletados por outras tecnologias como satélites de comunicação, celular, rádio entre outras.</p>
 
-          <img class="img-fluid rounded mb-3 mb-md-0 displayed" src="images/modelo_terrama2_v4.jpg" alt="">
+          <img class="img-fluid rounded mb-3 mb-md-0 displayed" src="images/modelo_terrama2_v4.jpg" alt="Fluxograma do TerraMa2">
         </div>
         <!-- /.Jumbotron -->
       </div><br><br>
@@ -238,7 +238,7 @@
                 </div>
                 <div class="footer-pad">
                   <div class="mx-auto" style="width: 200px;">
-                    <a href="http://www.inpe.br/" target="_blank"><img src="img/logo-inpe.png" width="50" height="40" class="rounded mx-auto d-block" alt=""></a>
+                    <a href="http://www.inpe.br/" target="_blank"><img src="img/logo-inpe.png" width="50" height="40" class="rounded mx-auto d-block" alt="Logotipo do INPE"></a>
                   </div>
                 </div>
               </div>
