--- a/team.html
+++ b/team.html
@@ -37,7 +37,7 @@
       <div class="container">
 
         <!-- Logo -->
-        <a href="index.html" title="Home" data-toggle="tooltip" data-placement="right"><img src="img/terrama2_logo_100dpi.png" width="60" height="50" alt="logo terraMa²"></a>
+        <a href="index.html" title="Home" data-toggle="tooltip" data-placement="right"><img src="img/terrama2_logo_100dpi.png" width="60" height="50" alt="logotipo do TerraMa2"></a>
 
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -75,10 +75,10 @@
               <a class="nav-link" href="#" data-toggle="tooltip" data-placement="bottom" title="Em Breve!">Cursos</a>
             </li>
             <li>
-              <a href="#" class="nav-link" data-toggle="tooltip" data-placement="bottom" title="Em Breve!"><img src="img/flagenglish.png"></a>
+              <a href="#" class="nav-link" data-toggle="tooltip" data-placement="bottom" title="Em Breve!"><img src="img/flagenglish.png" alt="bandeira da Inglaterra"></a>
             </li>
             <li>
-              <a href="#" class="nav-link" data-toggle="tooltip" data-placement="bottom" title="Em Breve!"><img src="img/flagespanha.png"></a>
+              <a href="#" class="nav-link" data-toggle="tooltip" data-placement="bottom" title="Em Breve!"><img src="img/flagespanha.png" alt="bandeira da Espanha"></a>
             </li>      
           </ul>
         </div>
@@ -118,7 +118,7 @@
               <div class="row">
                 <div class="col-lg-4 mb-4">
                   <div class="card h-100 text-center">
-                    <img class="card-img-top" src="http://placehold.it/750x450" alt="">
+                    <img class="card-img-top" src="http://placehold.it/750x450" alt="Imagem Genérica">
                     <div class="card-body">
                       <h4 class="card-title"><a href="http://lattes.cnpq.br/9390361877489668" target="_blank">Eymar Silva Sampaio Lopes</a></h4>
                     </div>
@@ -130,7 +130,7 @@
 
                 <div class="col-lg-4 mb-4">
                   <div class="card h-100 text-center">
-                    <img class="card-img-top" src="http://placehold.it/750x450" alt="">
+                    <img class="card-img-top" src="http://placehold.it/750x450" alt="Imagem Genérica">
                     <div class="card-body">
                       <h4 class="card-title"><a href="http://lattes.cnpq.br/9981634193003068" target="_blank">Gilberto Ribeiro de Queiroz</a></h4>
                     </div>
@@ -142,7 +142,7 @@
 
                 <div class="col-lg-4 mb-4">
                   <div class="card h-100 text-center">
-                    <img class="card-img-top" src="http://placehold.it/750x450" alt="">
+                    <img class="card-img-top" src="http://placehold.it/750x450" alt="Imagem Genérica">
                     <div class="card-body">
                       <h4 class="card-title"><a href="http://lattes.cnpq.br/0983590211329242" target="_blank">Laércio Massaru Namikawa</a></h4>
                     </div>
@@ -177,7 +177,7 @@
               <div class="row">
                 <div class="col-lg-4 mb-4">
                   <div class="card h-100 text-center">
-                    <img class="card-img-top" src="http://placehold.it/750x450" alt="">
+                    <img class="card-img-top" src="http://placehold.it/750x450" alt="Imagem Genérica">
                     <div class="card-body">
                       <h4 class="card-title">Antônio Miguel Vieira Monteiro</h4>
                     </div>
@@ -189,7 +189,7 @@
 
                 <div class="col-lg-4 mb-4">
                   <div class="card h-100 text-center">
-                    <img class="card-img-top" src="http://placehold.it/750x450" alt="">
+                    <img class="card-img-top" src="http://placehold.it/750x450" alt="Imagem Genérica">
                     <div class="card-body">
                       <h4 class="card-title">Julio Cesar Lima d'Alge</h4>
                     </div>
@@ -201,7 +201,7 @@
 
                 <div class="col-lg-4 mb-4">
                   <div class="card h-100 text-center">
-                    <img class="card-img-top" src="http://placehold.it/750x450" alt="">
+                    <img class="card-img-top" src="http://placehold.it/750x450" alt="Imagem Genérica">
                     <div class="card-body">
                       <h4 class="card-title">Chou Sin Chan</h4>
                     </div>
@@ -236,7 +236,7 @@
               <div class="row">
                 <div class="col-lg-4 mb-4">
                   <div class="card h-100 text-center">
-                    <img class="card-img-top" src="http://placehold.it/750x450" alt="">
+                    <img class="card-img-top" src="http://placehold.it/750x450" alt="Imagem Genérica">
                     <div class="card-body">
                       <h4 class="card-title">Agostinho Ogura (IPT)</h4>
                     </div>
@@ -248,7 +248,7 @@
 
                 <div class="col-lg-4 mb-4">
                   <div class="card h-100 text-center">
-                    <img class="card-img-top" src="http://placehold.it/750x450" alt="">
+                    <img class="card-img-top" src="http://placehold.it/750x450" alt="Imagem Genérica">
                     <div class="card-body">
                       <h4 class="card-title">Alessandra Corsi (IPT)</h4>
                     </div>
@@ -283,7 +283,7 @@
               <div class="row">
                 <div class="col-lg-4 mb-4">
                   <div class="card h-100 text-center">
-                    <img class="card-img-top" src="http://placehold.it/750x450" alt="">
+                    <img class="card-img-top" src="http://placehold.it/750x450" alt="Imagem Genérica">
                     <div class="card-body">
                       <h4 class="card-title">Carlos Augusto Teixeira Mendes</h4>
                     </div>
@@ -295,7 +295,7 @@
 
                 <div class="col-lg-4 mb-4">
                   <div class="card h-100 text-center">
-                    <img class="card-img-top" src="http://placehold.it/750x450" alt="">
+                    <img class="card-img-top" src="http://placehold.it/750x450" alt="Imagem Genérica">
                     <div class="card-body">
                       <h4 class="card-title">Javier Adolfo Baldan</h4>
                     </div>
@@ -307,7 +307,7 @@
 
                 <div class="col-lg-4 mb-4">
                   <div class="card h-100 text-center">
-                    <img class="card-img-top" src="http://placehold.it/750x450" alt="">
+                    <img class="card-img-top" src="http://placehold.it/750x450" alt="Imagem Genérica">
                     <div class="card-body">
                       <h4 class="card-title">Pedro Luchini</h4>
                     </div>
@@ -319,7 +319,7 @@
 
                 <div class="col-lg-4 mb-4">
                   <div class="card h-100 text-center">
-                    <img class="card-img-top" src="http://placehold.it/750x450" alt="">
+                    <img class="card-img-top" src="http://placehold.it/750x450" alt="Imagem Genérica">
                     <div class="card-body">
                       <h4 class="card-title">Gustavo Breder Sampaio</h4>
                     </div>
@@ -331,7 +331,7 @@
 
                 <div class="col-lg-4 mb-4">
                   <div class="card h-100 text-center">
-                    <img class="card-img-top" src="http://placehold.it/750x450" alt="">
+                    <img class="card-img-top" src="http://placehold.it/750x450" alt="Imagem Genérica">
                     <div class="card-body">
                       <h4 class="card-title">Ygor Hecht Speranza</h4>
                     </div>
@@ -366,7 +366,7 @@
               <div class="row">
                 <div class="col-lg-4 mb-4">
                   <div class="card h-100 text-center">
-                    <img class="card-img-top" src="http://placehold.it/750x450" alt="">
+                    <img class="card-img-top" src="http://placehold.it/750x450" alt="Imagem Genérica">
                     <div class="card-body">
                       <h4 class="card-title">Vinicius Campanha (2013 - atual)</h4>
                     </div>
@@ -401,7 +401,7 @@
               <div class="row">
                 <div class="col-lg-4 mb-4">
                   <div class="card h-100 text-center">
-                    <img class="card-img-top" src="http://placehold.it/750x450" alt="">
+                    <img class="card-img-top" src="http://placehold.it/750x450" alt="Imagem Genérica">
                     <div class="card-body">
                       <h4 class="card-title">Viviana Aguilar Muñoz (2013)</h4>
                     </div>
@@ -474,7 +474,7 @@
               </div>
               <div class="footer-pad">
                 <div class="mx-auto" style="width: 200px;">
-                  <a href="http://www.inpe.br/" target="_blank"><img src="img/logo-inpe.png" width="50" height="40" class="rounded mx-auto d-block" alt=""></a>
+                  <a href="http://www.inpe.br/" target="_blank"><img src="img/logo-inpe.png" width="50" height="40" class="rounded mx-auto d-block" alt="logotipo do INPE"></a>
                 </div>
               </div>
             </div>
