--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
         <div class="container">
 
           <!-- Logo -->
-          <a href="index.html" title="Home" data-toggle="tooltip" data-placement="right"><img src="img/terrama2_logo_100dpi.png" width="60" height="50" alt="logo terraMa²"></a>
+          <a href="index.html" title="Home" data-toggle="tooltip" data-placement="right"><img src="img/terrama2_logo_100dpi.png" width="60" height="50" alt="logotipo do TerraMa²"></a>
 
           <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -88,10 +88,10 @@
                 <a class="nav-link" href="#" data-toggle="tooltip" data-placement="bottom" title="Em Breve!">Cursos</a>
               </li>
               <li>
-                <a href="#" class="nav-link" data-toggle="tooltip" data-placement="bottom" title="Em Breve!"><img src="img/flagenglish.png"></a>
+                <a href="#" class="nav-link" data-toggle="tooltip" data-placement="bottom" title="Em Breve!"><img src="img/flagenglish.png" alt="bandeira da Inglaterra"></a>
               </li>
               <li>
-                <a href="#" class="nav-link" data-toggle="tooltip" data-placement="bottom" title="Em Breve!"><img src="img/flagespanha.png"></a>
+                <a href="#" class="nav-link" data-toggle="tooltip" data-placement="bottom" title="Em Breve!"><img src="img/flagespanha.png" alt="bandeira da Espanha"></a>
               </li>
              <!--  <li><a href="#" class="acessibilidade" onclick="alto_contraste('','1')"><img src="img/contrast-icon.png" alt="" width="45" height="45"></a></li>
               <li><a href="#" class="iautocontraste" onclick="alto_contraste('alto_contraste','1')"><img src="img/contrast-icon.png" alt="" width="45" height="45" title="Alto Contraste"></a></li> -->
@@ -132,7 +132,7 @@
           </div>
 
           <div class="col-lg-6">
-            <img class="img-fluid rounded mb-4" src="images/NovoTerrama2.jpg" alt="">
+            <img class="img-fluid rounded mb-4" src="images/NovoTerrama2.jpg" alt="Interface do TerraMa2">
           </div>
 
           <div class="col-lg-6">
@@ -228,7 +228,7 @@
               </div>
               <div class="footer-pad">
                 <div class="mx-auto" style="width: 200px;">
-                  <a href="http://www.inpe.br/" target="_blank"><img src="img/logo-inpe.png" width="50" height="40" class="rounded mx-auto d-block" alt=""></a>
+                  <a href="http://www.inpe.br/" target="_blank"><img src="img/logo-inpe.png" width="50" height="40" class="rounded mx-auto d-block" alt="Logotipo do INPE"></a>
                 </div>
               </div>
             </div>
