--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="container">
 
           <!-- Logo -->
-          <a href="index.html" title="Home"><img src="img/terrama2_logo_100dpi.png" width="60" height="50" alt="logo terraMa²"></a>
+          <a href="index.html" title="Home"><img src="img/terrama2_logo_100dpi.png" width="60" height="50" alt="logotipo do TerraMa2"></a>
 
           <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -75,10 +75,10 @@
                 <a class="nav-link" href="#" data-toggle="tooltip" data-placement="bottom" title="Em Breve!">Cursos</a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link" data-toggle="tooltip" data-placement="bottom" title="Em Breve!"><img src="img/flagenglish.png"></a>
+                <a href="#" class="nav-link" data-toggle="tooltip" data-placement="bottom" title="Em Breve!"><img src="img/flagenglish.png" alt="bandeira da Inglaterra"></a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link" data-toggle="tooltip" data-placement="bottom" title="Em Breve!"><img src="img/flagespanha.png"></a>
+                <a href="#" class="nav-link" data-toggle="tooltip" data-placement="bottom" title="Em Breve!"><img src="img/flagespanha.png" alt="bandeira da Espanha"></a>
               </li>
             </ul>
           </div>
@@ -99,7 +99,7 @@
           <div class="carousel-inner" role="listbox">
 
             <div class="carousel-item active">
-              <img class="d-block w-100" src="images/wildfire.png" alt="Queimadas">
+              <img class="d-block w-100" src="images/wildfire.png" alt="Imagem de Queimadas">
               <div class="carousel-caption d-none d-md-block">
                 <!-- <h1>Queimadas</h1> -->
                 <!-- <p>This is a description for the first slide.</p> -->
@@ -107,7 +107,7 @@
             </div>
 
             <div class="carousel-item">
-              <img class="d-block w-100" src="images/storm.png" alt="Raios">
+              <img class="d-block w-100" src="images/storm.png" alt="Imagem de Raios">
               <div class="carousel-caption d-none d-md-block">
                 <!-- <h1>Raios</h1> -->
                 <!--  <p>This is a description for the second slide.</p> -->
@@ -115,7 +115,7 @@
             </div>
 
             <div class="carousel-item">
-              <img class="d-block w-100" src="images/inundation.png" alt="Inundações">
+              <img class="d-block w-100" src="images/inundation.png" alt="Imagem de Inundações">
               <div class="carousel-caption d-none d-md-block">
                 <!-- <h1>Inundações</h1> -->
                 <!-- <p>This is a description for the third slide.</p> -->
@@ -123,7 +123,7 @@
             </div>
 
             <div class="carousel-item">
-              <img class="d-block w-100" src="images/terrama2_v4.png" alt="Projeto TerraMa²">
+              <img class="d-block w-100" src="images/terrama2_v4.png" alt="Estrutura do projeto TerraMa2">
               <div class="carousel-caption d-none d-md-block">
                <!--  <h1>Third Slide</h1> -->
                <!-- <p>This is a description for the third slide.</p>--> 
@@ -172,7 +172,7 @@
         <div class="row">
           <div class="col-md-6">
             <figure class="figure">
-              <img src="images/selection_001.png" class="figure-img img-fluid rounded" alt="">
+              <img src="images/selection_001.png" class="figure-img img-fluid rounded" alt="Aplicação Web do projeto TerraMa2">
               <figcaption class="figure-caption">Aplicação Web TerraMA²</figcaption>
             </figure>
           </div>
@@ -281,7 +281,7 @@
             </div>
             <div class="footer-pad">
               <div class="mx-auto" style="width: 200px;">
-                <a href="http://www.inpe.br/" target="_blank"><img src="img/logo-inpe.png" width="50" height="40" class="rounded mx-auto d-block" alt=""></a>
+                <a href="http://www.inpe.br/" target="_blank"><img src="img/logo-inpe.png" width="50" height="40" class="rounded mx-auto d-block" alt="Logotipo do INPE"></a>
               </div>
             </div>
           </div>
