--- a/projects.html
+++ b/projects.html
@@ -37,7 +37,7 @@
         <div class="container">
 
           <!-- Logo -->
-          <a href="index.html" title="Home" data-toggle="tooltip" data-placement="right"><img src="img/terrama2_logo_100dpi.png" width="60" height="50" alt="logo terraMa²"></a>
+          <a href="index.html" title="Home" data-toggle="tooltip" data-placement="right"><img src="img/terrama2_logo_100dpi.png" width="60" height="50" alt="logotipo do TerraMa2"></a>
 
           <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -75,10 +75,10 @@
                 <a class="nav-link" href="#" data-toggle="tooltip" data-placement="bottom" title="Em Breve!">Cursos</a>
               </li>
               <li>
-                <a href="#" class="nav-link" data-toggle="tooltip" data-placement="bottom" title="Em Breve!"><img src="img/flagenglish.png"></a>
+                <a href="#" class="nav-link" data-toggle="tooltip" data-placement="bottom" title="Em Breve!"><img src="img/flagenglish.png" alt="bandeira da Inglaterra"></a>
               </li>
               <li>
-                <a href="#" class="nav-link" data-toggle="tooltip" data-placement="bottom" title="Em Breve!"><img src="img/flagespanha.png"></a>
+                <a href="#" class="nav-link" data-toggle="tooltip" data-placement="bottom" title="Em Breve!"><img src="img/flagespanha.png" alt="bandeira da Espanha"></a>
               </li>      
             </ul>
           </div>
@@ -104,7 +104,7 @@
         <div class="row">
           <div class="col-lg-3 col-md-4 col-sm-6 portfolio-item">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+              <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt="Imagem Genérica"></a>
               <div class="card-body">
                 <h4 class="card-title">
                   <a href="#">Project One</a>
@@ -115,7 +115,7 @@
           </div>
           <div class="col-lg-3 col-md-4 col-sm-6 portfolio-item">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+              <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt="Imagem Genérica"></a>
               <div class="card-body">
                 <h4 class="card-title">
                   <a href="#">Project Two</a>
@@ -126,7 +126,7 @@
           </div>
           <div class="col-lg-3 col-md-4 col-sm-6 portfolio-item">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+              <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt="Imagem Genérica"></a>
               <div class="card-body">
                 <h4 class="card-title">
                   <a href="#">Project Three</a>
@@ -137,7 +137,7 @@
           </div>
           <div class="col-lg-3 col-md-4 col-sm-6 portfolio-item">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+              <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt="Imagem Genérica"></a>
               <div class="card-body">
                 <h4 class="card-title">
                   <a href="#">Project Four</a>
@@ -148,7 +148,7 @@
           </div>
           <div class="col-lg-3 col-md-4 col-sm-6 portfolio-item">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+              <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt="Imagem Genérica"></a>
               <div class="card-body">
                 <h4 class="card-title">
                   <a href="#">Project Five</a>
@@ -159,7 +159,7 @@
           </div>
           <div class="col-lg-3 col-md-4 col-sm-6 portfolio-item">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+              <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt="Imagem Genérica"></a>
               <div class="card-body">
                 <h4 class="card-title">
                   <a href="#">Project Six</a>
@@ -170,7 +170,7 @@
           </div>
           <div class="col-lg-3 col-md-4 col-sm-6 portfolio-item">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+              <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt="Imagem Genérica"></a>
               <div class="card-body">
                 <h4 class="card-title">
                   <a href="#">Project Seven</a>
@@ -181,7 +181,7 @@
           </div>
           <div class="col-lg-3 col-md-4 col-sm-6 portfolio-item">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+              <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt="Imagem Genérica"></a>
               <div class="card-body">
                 <h4 class="card-title">
                   <a href="#">Project Eight</a>
@@ -273,7 +273,7 @@
                 </div>
                 <div class="footer-pad">
                   <div class="mx-auto" style="width: 200px;">
-                    <a href="http://www.inpe.br/" target="_blank"><img src="img/logo-inpe.png" width="50" height="40" class="rounded mx-auto d-block" alt=""></a>
+                    <a href="http://www.inpe.br/" target="_blank"><img src="img/logo-inpe.png" width="50" height="40" class="rounded mx-auto d-block" alt="logotipo do INPE"></a>
                   </div>
                 </div>
               </div>
