updating links (footer)

--- a/contact.html
+++ b/contact.html
@@ -209,7 +209,7 @@
                   <li><a href="#"></a></li>
                   <li><a href="download.html">Download</a></li>
                   <li><a href="documentation.html">Documentação</a></li>
-                  <li><a href="#" data-toggle="tooltip" data-placement="left" title="Em Breve!">Cursos</a></li>
+                  <li><a href="courses.html">Cursos</a></li>
                 </ul>
               </div>
             </div>
