--- a/download.html
+++ b/download.html
@@ -225,106 +225,95 @@
       <!-- /.Container -->
 
       <!-- Footer -->
-      <footer class="mainfooter">
-        <div class="footer-top p-y-2">
-          <div class="container-fluid">
+       <footer class="mainfooter">
+    <div class="footer-top p-y-2">
+      <div class="container-fluid">
 
+      </div>
+    </div>
+    <div class="footer-middle">
+      <div class="container">
+        <div class="row">
+
+          <div class="col-6 col-md-4">
+            <!--Column1-->
+            <div class="footer-pad">
+              <h4>Sobre</h4>
+              <ul class="list-unstyled">
+                <li><a href="#"></a></li>
+                <li><a href="about.html">TerraMA²</a></li>
+                <li><a href="team.html">Equipe</a></li>
+                <li><a href="architecture.html">Arquitetura</a></li>
+                <li><a href="contact.html">Contato</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-6 col-md-4">
+            <!--Column1-->
+            <div class="footer-pad">
+              <h4>Projetos</h4>
+              <ul class="list-unstyled">
+                <li><a href="#"></a></li>
+                <li><a href="projects.html">Projetos</a></li>
+                <li><a href="#" data-toggle="tooltip" data-placement="left" title="Em Breve!">Estudos de Caso</a></li>
+              </ul>
+            </div>
+
+            <div class="footer-pad">
+              <ul class="list-unstyled">
+                <li><a href="#"></a></li>
+                <li><a href="download.html">Download</a></li>
+                <li><a href="documentation.html">Documentação</a></li>
+                <li><a href="courses.html">Cursos</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-6 col-md-4">
+            <!--Column1-->
+            <div class="footer-pad">
+              <h4>Endereço</h4>
+
+              <p>Avenida dos Astronautas, 1.758 Jardim da Granja CEP: 12227 010 São José dos Campos - SP</p>
+            </div>
+            <div class="footer-pad">
+              <div class="mx-auto" style="width: 200px;">
+                <a href="http://www.inpe.br/" target="_blank"><img src="img/logo-inpe.png" width="50" height="40" class="rounded mx-auto d-block" alt="Logotipo do INPE"></a>
+              </div>
+            </div>
+          </div>
+        </div> 
+      </div>
+
+    </div>
+    <div class="footer-bottom">
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-12">
+            <!--Footer Bottom-->
+            <p>&copy; Copyright 2017 TerraMA².  All rights reserved.</p>
           </div>
         </div>
-        <div class="footer-middle">
-          <div class="container">
-            <div class="row">
+      </div>
+    </div>
+  </footer>
+  <!-- /.Footer -->
 
-              <div class="col-6 col-md-4">
-                <!--Column1-->
-                <div class="footer-pad">
-                  <h4>Sobre</h4>
-                  <ul class="list-unstyled">
-                    <li><a href="#"></a></li>
-                    <li><a href="about.html">TerraMA²</a></li>
-                    <li><a href="team.html">Equipe</a></li>
-                    <li><a href="architecture.html">Arquitetura</a></li>
-                    <li><a href="contact.html">Contato</a></li>
-                  </ul>
-                </div>
-              </div>
-              <div class="col-6 col-md-4">
-                <!--Column1-->
-                <div class="footer-pad">
-                  <h4>Projetos</h4>
-                  <ul class="list-unstyled">
-                    <li><a href="#"></a></li>
-                    <li><a href="projects.html">Projetos</a></li>
-                    <li><a href="#" data-toggle="tooltip" data-placement="left" title="Em Breve!">Estudos de Caso</a></li>
-                  </ul>
-                </div>
+  <!-- Gov -->
+  <script defer="defer" src="//barra.brasil.gov.br/barra.js" type="text/javascript"></script>
+  <!-- /.Gov -->
 
-                <div class="col-6 col-md-4">
-                  <!--Column1-->
-                  <div class="footer-pad">
-                    <h4>Projetos</h4>
-                    <ul class="list-unstyled">
-                      <li><a href="#"></a></li>
-                      <li><a href="projects.html">Projetos</a></li>
-                      <li><a href="#" data-toggle="tooltip" data-placement="left" title="Em Breve!">Estudos de Caso</a></li>
-                    </ul>
-                  </div>
+  <!-- Bootstrap core JavaScript -->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/popper/popper.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
 
-                  <div class="footer-pad">
-                    <ul class="list-unstyled">
-                      <li><a href="#"></a></li>
-                      <li><a href="download.html">Download</a></li>
-                      <li><a href="documentation.html">Documentação</a></li>
-                      <li><a href="#" data-toggle="tooltip" data-placement="left" title="Em Breve!">Cursos</a></li>
-                    </ul>
-                  </div>
-                </div>
-                <div class="col-6 col-md-4">
-                  <!--Column1-->
-                  <div class="footer-pad">
-                    <h4>Endereço</h4>
+  <!-- Script tooltip -->
+  <script>
+    $(document).ready(function(){
+      $('[data-toggle="tooltip"]').tooltip();   
+    });
+  </script>
 
-                    <p>Avenida dos Astronautas, 1.758 Jardim da Granja CEP: 12227 010 São José dos Campos - SP</p>
-                  </div>
-                  <div class="footer-pad">
-                    <div class="mx-auto" style="width: 200px;">
-                      <a href="http://www.inpe.br/" target="_blank"><img src="img/logo-inpe.png" width="50" height="40" class="rounded mx-auto d-block" alt="Logotipo do INPE"></a>
-                    </div>
-                  </div>
-                </div>
-              </div> 
-            </div>
-
-          </div>
-          <div class="footer-bottom">
-            <div class="container">
-              <div class="row">
-                <div class="col-xs-12">
-                  <!--Footer Bottom-->
-                  <p>&copy; Copyright 2017 TerraMA².  All rights reserved.</p>
-
-                </div>
-              </div>
-            </div>
-          </div>
-        </footer>
-        <!-- /.Footer -->
-
-        <!-- Gov -->
-        <script defer="defer" src="//barra.brasil.gov.br/barra.js" type="text/javascript"></script>
-        <!-- /.Gov -->
-
-        <!-- Bootstrap core JavaScript -->
-        <script src="vendor/jquery/jquery.min.js"></script>
-        <script src="vendor/popper/popper.min.js"></script>
-        <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-
-        <!-- Script tooltip -->
-        <script>
-          $(document).ready(function(){
-            $('[data-toggle="tooltip"]').tooltip();   
-          });
-        </script>
 
       </body>
       </html>
