updating page download

--- a/team.html
+++ b/team.html
@@ -57,7 +57,7 @@
               </div>
             </li>
             <li class="nav-item">
-                  <a class="nav-link" href="projects.html">Projetos</a>
+              <a class="nav-link" href="projects.html">Projetos</a>
             </li>
             <!-- <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="about.html" id="navbarDropdownProjects" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -71,8 +71,19 @@
             <li class="nav-item">
               <a class="nav-link" href="download.html">Download</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href="documentation.html">Documentação</a>
+            </li> -->
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="about.html" id="navbarDropdownAbout" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Documentação
+              </a>
+              <div class="dropdown-menu dropdown-menu-left" aria-labelledby="navbarDropdownAbout">
+                <a class="dropdown-item" href="#">Apresentações</a>
+                <a class="dropdown-item" href="#">Manuais</a>
+                <a class="dropdown-item" href="#">Publicações</a>
+                <a class="dropdown-item" href="#">Videos</a>
+              </div>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="courses.html">Cursos</a>
