--- a/download.html
+++ b/download.html
@@ -33,61 +33,72 @@
       <!-- /.Gov -->
 
       <!-- Navigation -->
-      <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-light">  
-        <div class="container">
+    <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-light">  
+      <div class="container">
 
-          <!-- Logo -->
-          <a href="index.html" title="Home" data-toggle="tooltip" data-placement="right"><img src="img/terrama2_logo_100dpi.png" width="60" height="50" alt="logotipo do TerraMa2"></a>
+        <!-- Logo -->
+        <a href="index.html" title="Home" data-toggle="tooltip" data-placement="right"><img src="img/terrama2_logo_100dpi.png" width="60" height="50" alt="logotipo do TerraMa2"></a>
 
-          <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-          <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav ml-auto">
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="about.html" id="navbarDropdownAbout" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Sobre
-                </a>
-                <div class="dropdown-menu dropdown-menu-left" aria-labelledby="navbarDropdownAbout">
-                  <a class="dropdown-item" href="about.html">TerraMA²</a>
-                  <a class="dropdown-item" href="team.html">Equipe</a>
-                  <a class="dropdown-item" href="architecture.html">Arquitetura</a>
-                  <a class="dropdown-item" href="contact.html">Contato</a>
-                </div>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="projects.html">Projetos</a>
-              </li>
-              <!-- <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="about.html" id="navbarDropdownProjects" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Projetos
-                </a>
-                <div class="dropdown-menu dropdown-menu-left" aria-labelledby="navbarDropdownAbout">
-                  <a class="dropdown-item" href="projects.html">Projetos</a>
-                  <a class="dropdown-item" href="#" data-toggle="tooltip" data-placement="right" title="Em Breve!">Estudos de Casos</a>
-                </div>
-              </li> -->
-              <li class="nav-item">
-                <a class="nav-link" href="download.html">Download</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="documentation.html">Documentação</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="courses.html">Cursos</a>
-              </li>
-              <li>
-                <a href="#" class="nav-link" data-toggle="tooltip" data-placement="bottom" title="Em Breve!"><img src="img/flagenglish.png" alt="bandeira da Inglaterra"></a>
-              </li>
-              <li>
-                <a href="#" class="nav-link" data-toggle="tooltip" data-placement="bottom" title="Em Breve!"><img src="img/flagespanha.png" alt="bandeira da Espanha"></a>
-              </li>      
-            </ul>
-          </div>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="about.html" id="navbarDropdownAbout" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Sobre
+              </a>
+              <div class="dropdown-menu dropdown-menu-left" aria-labelledby="navbarDropdownAbout">
+                <a class="dropdown-item" href="about.html">TerraMA²</a>
+                <a class="dropdown-item" href="team.html">Equipe</a>
+                <a class="dropdown-item" href="architecture.html">Arquitetura</a>
+                <a class="dropdown-item" href="contact.html">Contato</a>
+              </div>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="projects.html">Projetos</a>
+            </li>
+            <!-- <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="about.html" id="navbarDropdownProjects" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Projetos
+              </a>
+              <div class="dropdown-menu dropdown-menu-left" aria-labelledby="navbarDropdownAbout">
+                <a class="dropdown-item" href="projects.html">Projetos</a>
+                <a class="dropdown-item" href="#" data-toggle="tooltip" data-placement="right" title="Em Breve!">Estudos de Casos</a>
+              </div>
+            </li> -->
+            <li class="nav-item">
+              <a class="nav-link" href="download.html">Download</a>
+            </li>
+            <!-- <li class="nav-item">
+              <a class="nav-link" href="documentation.html">Documentação</a>
+            </li> -->
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="about.html" id="navbarDropdownAbout" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Documentação
+              </a>
+              <div class="dropdown-menu dropdown-menu-left" aria-labelledby="navbarDropdownAbout">
+                <a class="dropdown-item" href="#">Apresentações</a>
+                <a class="dropdown-item" href="#">Manuais</a>
+                <a class="dropdown-item" href="#">Publicações</a>
+                <a class="dropdown-item" href="#">Videos</a>
+              </div>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="courses.html">Cursos</a>
+            </li>
+            <li>
+              <a href="#" class="nav-link" data-toggle="tooltip" data-placement="bottom" title="Em Breve!"><img src="img/flagenglish.png" alt="bandeira da Inglaterra"></a>
+            </li>
+            <li>
+              <a href="#" class="nav-link" data-toggle="tooltip" data-placement="bottom" title="Em Breve!"><img src="img/flagespanha.png" alt="bandeira da Espanha"></a>
+            </li>      
+          </ul>
         </div>
-      </nav>
-      <!-- /.Navigation -->
+      </div>
+    </nav>
+    <!-- /.Navigation -->
 
       <!-- Container -->
       <div class="container">
@@ -228,95 +239,95 @@
       <!-- /.Container -->
 
       <!-- Footer -->
-       <footer class="mainfooter">
-    <div class="footer-top p-y-2">
-      <div class="container-fluid">
+      <footer class="mainfooter">
+        <div class="footer-top p-y-2">
+          <div class="container-fluid">
 
-      </div>
-    </div>
-    <div class="footer-middle">
-      <div class="container">
-        <div class="row">
-
-          <div class="col-6 col-md-4">
-            <!--Column1-->
-            <div class="footer-pad">
-              <h4>Sobre</h4>
-              <ul class="list-unstyled">
-                <li><a href="#"></a></li>
-                <li><a href="about.html">TerraMA²</a></li>
-                <li><a href="team.html">Equipe</a></li>
-                <li><a href="architecture.html">Arquitetura</a></li>
-                <li><a href="contact.html">Contato</a></li>
-              </ul>
-            </div>
           </div>
-          <div class="col-6 col-md-4">
-            <!--Column1-->
-            <div class="footer-pad">
-              <h4>Projetos</h4>
-              <ul class="list-unstyled">
-                <li><a href="#"></a></li>
-                <li><a href="projects.html">Projetos</a></li>
-                <li><a href="#" data-toggle="tooltip" data-placement="left" title="Em Breve!">Estudos de Caso</a></li>
-              </ul>
-            </div>
+        </div>
+        <div class="footer-middle">
+          <div class="container">
+            <div class="row">
 
-            <div class="footer-pad">
-              <ul class="list-unstyled">
-                <li><a href="#"></a></li>
-                <li><a href="download.html">Download</a></li>
-                <li><a href="documentation.html">Documentação</a></li>
-                <li><a href="courses.html">Cursos</a></li>
-              </ul>
-            </div>
+              <div class="col-6 col-md-4">
+                <!--Column1-->
+                <div class="footer-pad">
+                  <h4>Sobre</h4>
+                  <ul class="list-unstyled">
+                    <li><a href="#"></a></li>
+                    <li><a href="about.html">TerraMA²</a></li>
+                    <li><a href="team.html">Equipe</a></li>
+                    <li><a href="architecture.html">Arquitetura</a></li>
+                    <li><a href="contact.html">Contato</a></li>
+                  </ul>
+                </div>
+              </div>
+              <div class="col-6 col-md-4">
+                <!--Column1-->
+                <div class="footer-pad">
+                  <h4>Projetos</h4>
+                  <ul class="list-unstyled">
+                    <li><a href="#"></a></li>
+                    <li><a href="projects.html">Projetos</a></li>
+                    <li><a href="#" data-toggle="tooltip" data-placement="left" title="Em Breve!">Estudos de Caso</a></li>
+                  </ul>
+                </div>
+
+                <div class="footer-pad">
+                  <ul class="list-unstyled">
+                    <li><a href="#"></a></li>
+                    <li><a href="download.html">Download</a></li>
+                    <li><a href="documentation.html">Documentação</a></li>
+                    <li><a href="courses.html">Cursos</a></li>
+                  </ul>
+                </div>
+              </div>
+              <div class="col-6 col-md-4">
+                <!--Column1-->
+                <div class="footer-pad">
+                  <h4>Endereço</h4>
+
+                  <p>Avenida dos Astronautas, 1.758 Jardim da Granja CEP: 12227 010 São José dos Campos - SP</p>
+                </div>
+                <div class="footer-pad">
+                  <div class="mx-auto" style="width: 200px;">
+                    <a href="http://www.inpe.br/" target="_blank"><img src="img/logo-inpe.png" width="50" height="40" class="rounded mx-auto d-block" alt="Logotipo do INPE"></a>
+                  </div>
+                </div>
+              </div>
+            </div> 
           </div>
-          <div class="col-6 col-md-4">
-            <!--Column1-->
-            <div class="footer-pad">
-              <h4>Endereço</h4>
 
-              <p>Avenida dos Astronautas, 1.758 Jardim da Granja CEP: 12227 010 São José dos Campos - SP</p>
-            </div>
-            <div class="footer-pad">
-              <div class="mx-auto" style="width: 200px;">
-                <a href="http://www.inpe.br/" target="_blank"><img src="img/logo-inpe.png" width="50" height="40" class="rounded mx-auto d-block" alt="Logotipo do INPE"></a>
+        </div>
+        <div class="footer-bottom">
+          <div class="container">
+            <div class="row">
+              <div class="col-xs-12">
+                <!--Footer Bottom-->
+                <p>&copy; Copyright 2017 TerraMA².  All rights reserved.</p>
               </div>
             </div>
           </div>
-        </div> 
-      </div>
-
-    </div>
-    <div class="footer-bottom">
-      <div class="container">
-        <div class="row">
-          <div class="col-xs-12">
-            <!--Footer Bottom-->
-            <p>&copy; Copyright 2017 TerraMA².  All rights reserved.</p>
-          </div>
         </div>
-      </div>
-    </div>
-  </footer>
-  <!-- /.Footer -->
+      </footer>
+      <!-- /.Footer -->
 
-  <!-- Gov -->
-  <script defer="defer" src="//barra.brasil.gov.br/barra.js" type="text/javascript"></script>
-  <!-- /.Gov -->
+      <!-- Gov -->
+      <script defer="defer" src="//barra.brasil.gov.br/barra.js" type="text/javascript"></script>
+      <!-- /.Gov -->
 
-  <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/popper/popper.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+      <!-- Bootstrap core JavaScript -->
+      <script src="vendor/jquery/jquery.min.js"></script>
+      <script src="vendor/popper/popper.min.js"></script>
+      <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
 
-  <!-- Script tooltip -->
-  <script>
-    $(document).ready(function(){
-      $('[data-toggle="tooltip"]').tooltip();   
-    });
-  </script>
+      <!-- Script tooltip -->
+      <script>
+        $(document).ready(function(){
+          $('[data-toggle="tooltip"]').tooltip();   
+        });
+      </script>
 
 
-      </body>
-      </html>
+    </body>
+    </html>
