--- a/download-v2.html
+++ b/download-v2.html
@@ -119,8 +119,8 @@
         <li class="breadcrumb-item active">Download</li>
       </ol>
 
+    </div>
 
-      <!-- Linux -->
       <div class="jumbotron">
 
         <h5> Release 4.0 - RC2  | disponível (25/08/2017)</h5><br>
