--- a/team.html
+++ b/team.html
@@ -301,15 +301,14 @@
               <div class="card-body">
                 <ul>
                   <li>Jano Gomes Simas</li>
-                  <li>Jean</li>
-                  <li>Raphael Costa</li>
+                  <li>Jean Carlos França de Souza</li>
+                  <li>Raphael Willian da Costa</li>
                   <li>Francisco Vinhas Neto</li>
-                  <li>Bianca Maciel</li>
-                  <li>Maria Antonia</li>
+                  <li>Bianca Maciel Brasilino</li>
+                  <li>Maria Antonia Falcão de Oliveira</li>
                 </ul>
               </div>
             </div>
-
 
             <div class="card">
               <div class="card-header">
