--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
                 </div>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="projects.html">Projetos</a>
+                <a class="nav-link" href="projects.html">Projetos</a>
               </li>
               <!-- <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="about.html" id="navbarDropdownProjects" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -152,7 +152,7 @@
 
           <div class="col-lg-6">
 
-            <p>Essa plataforma possui as seguintes características principais: </p>
+           <!--  <p>Essa plataforma possui as seguintes características principais: </p>
             
             <ul>
               <li>Permite a customização do uso de diferentes fontes de dados usando uma arquitetura orientada a serviços;</li>
@@ -160,126 +160,153 @@
               <li>Permite diferentes saídas desde a Web, aplicativos desktop e notificações personalizadas.​</li>
             </ul>
             
-            <p>Essas características permitem que a plataforma seja usada para implantar sistemas de monitoramento em nível municipal, estadual ou federal, ou até mesmo em projetos regionais.</p>           
+            <p>Essas características permitem que a plataforma seja usada para implantar sistemas de monitoramento em nível municipal, estadual ou federal, ou até mesmo em projetos regionais.</p> -->
+
+            <p>A geração 4 da plataforma TerraMA2 foi totalmente reestruturada para ficar mais amigável, ágil, flexível e compatível com os padrões internacionais do mercado ditados pelo Open Geospatial Consortium – OGC, padrões ISO do geoprocessamento. Os principais avanços nessa nova versão são:</p>
+
+            <ul>
+              <li><p>Armazenamento e acesso a dados geoespaciais nos padrões OGC SFS - Simple Feature Access e serviços web como WMS (Web Map Service), WCS (Web Coverage Service) e WFS (Web Feature Service);</p></li>
+              <li><p>Capacidade para trabalhar com bases de dados distribuídas, tanto  para dados estáticos quanto dinâmicos;</p></li>
+            </ul>               
           </div>
+
+          <div class="col-lg-12">
+            <ul>
+              <li><p>Suporte a diferentes arquiteturas para armazenamento dos dados: arquivos vetoriais, arquivos matriciais, servidores de bancos de dados e serviços web;</p></li>
+              <li><p>Execução de serviços locais ou remotos em diferentes máquinas;</p></li>
+              <li><p>Administração de usuários e gerencia de projetos por interface WEB;</p></li>
+              <li><p>Novo visualizador WEB de monitoramento;</p></li>
+              <li><p>Análise por scripts na linguagem de programação Phyton, com novos operadores geográficos sobre dados ambientais.</p></li>
+            </ul>
+          </div>  
+
 
           <div class="col-lg-12">
             <div class="jumbotron border border-warning">
 
               <h3>Quem opera a plataforma?</h3><br>
 
-              <p>A TerraMA² provê serviços para busca de dados atuais através da internet e sua incorporação à base de dados do sistema de alerta;</p> 
-              <p>Serviços para tratar/analisar em tempo real dados novos e verificar se uma situação de risco existe, através de uma comparação com mapas de risco ou de um modelo definido;</p>
-            Serviços para executar/editar/criar novos modelos de risco e alerta; serviços para criação e notificação de alerta para os usuários do sistema em operação entre outros serviços básicos e avançados.</p>
-            <p>A operação do sistema de alerta requer o acesso a dados atuais de observação e previsão, além de mapas de risco das áreas observadas ou de modelos matemáticos que definam os riscos.</p> 
-            <p><b>Operadores do Sistema:</b> Os operadores do sistema são organizações que monitoram a possibilidade de ocorrência do desastres.</p> 
-            <p><b>Clientes dos Alertas:</b> Os clientes dos alertas do sistema são os agentes que tem a competência para executar as ações preventivas para a diminuição de perdas no caso da ocorrência do desastre.</p>
-          </div>
-        </div>
+            <!-- <p>A TerraMA² provê serviços para busca de dados atuais através da internet e sua incorporação à base de dados do sistema de alerta;</p> 
+            <p>Serviços para tratar/analisar em tempo real dados novos e verificar se uma situação de risco existe, através de uma comparação com mapas de risco ou de um modelo definido;</p>
+          Serviços para executar/editar/criar novos modelos de risco e alerta; serviços para criação e notificação de alerta para os usuários do sistema em operação entre outros serviços básicos e avançados.</p>
+          <p>A operação do sistema de alerta requer o acesso a dados atuais de observação e previsão, além de mapas de risco das áreas observadas ou de modelos matemáticos que definam os riscos.</p> 
+          <p><b>Operadores do Sistema:</b> Os operadores do sistema são organizações que monitoram a possibilidade de ocorrência do desastres.</p> 
+          <p><b>Clientes dos Alertas:</b> Os clientes dos alertas do sistema são os agentes que tem a competência para executar as ações preventivas para a diminuição de perdas no caso da ocorrência do desastre.</p> -->
+          <p>A operação da plataforma em salas de monitoramento ambiental (prefeituras, defesa civil, institutos de pesquisa ou empresas) requer três níveis de usuários, divididos em:</p>
 
-        <div class="col-lg-12">
-          <h3>Base de Dados</h3>
           <ul>
-            <li>Dados dinâmicos - informam sobre a condição de variáveis obtidas em intervalos de tempo pré-determinados.</li>
-            <li>Dados estáticos - contêm informações sobre as pré-condições necessárias para a ocorrência de um desastre. Sua atualização deve ser realizada sempre que uma pré-condição é alterada ou quando o modelo de ocorrência do desastre é atualizado.</li>
-            <li>Dados adicionais - outras informações que auxiliem a localização das áreas de risco e das populações ou equipamentos vulneráveis ao desastre analisado.</li>
+            <li><p>Administradores da Plataforma: São usuários que fazem a instalação, configuração e administração da plataforma. São responsáveis por definir onde serão criados os bancos de dados e a gerência dos serviços que ficarão automaticamente realizando as tarefas definidas pelos operadores do sistema construído. Usuário com este privilégio utiliza o módulo de administração web para gerenciar outros usuários, com ou sem privilégio de administrador, ou ainda projetos definidos pelo usuários</p></li>
+            <li><p>Operadores da Plataforma: Os operadores são usuários sem privilégio de administrador que também fazem no módulo de administração web, porém, apenas para gerenciar os projetos criados por estes usuários. Estes usuários farão uso dos serviços de coleta, análise e notificação previamente inicializados por um administrador para desenvolver seus projetos e dessa maneira criar um sistema de monitoramento, análise e alerta.</p></li>
+            <li><p>Clientes dos Alertas: São os usuários ou agentes que têm a competência para executar as ações preventivas para a diminuição de perdas no caso da ocorrência de um evento extremo. Estes terão acesso apenas ao módulo de monitoramento web para visualização dos dados e alertas em tempo real. Recebe ainda notificações por meio de email ou mensagens eletrônicas.</p></li>
           </ul>
-        </div>
+          <p>NOTA: Esta divisão é apenas para fins de gestão em instituições que têm esta necessidade de fazer monitoramento. Em outras situações uma única pessoa pode exercer os três níveis como por exemplo, um pesquisador que deseja testar seus modelos de análise em um computador pessoal.</p>
+   
       </div>
-      <!-- /.row -->
     </div>
-    <!-- /.Container -->
 
-    <!-- Footer -->
-    <footer class="mainfooter">
-      <div class="footer-top p-y-2">
-        <div class="container-fluid">
+    <div class="col-lg-12">
+      <h3>Base de Dados</h3>
+      <ul>
+        <li>Dados dinâmicos - informam sobre a condição de variáveis obtidas em intervalos de tempo pré-determinados.</li>
+        <li>Dados estáticos - contêm informações sobre as pré-condições necessárias para a ocorrência de um desastre. Sua atualização deve ser realizada sempre que uma pré-condição é alterada ou quando o modelo de ocorrência do desastre é atualizado.</li>
+        <li>Dados adicionais - outras informações que auxiliem a localização das áreas de risco e das populações ou equipamentos vulneráveis ao desastre analisado.</li>
+      </ul>
+    </div>
+  </div>
+  <!-- /.row -->
+</div>
+<!-- /.Container -->
 
+<!-- Footer -->
+<footer class="mainfooter">
+  <div class="footer-top p-y-2">
+    <div class="container-fluid">
+
+    </div>
+  </div>
+  <div class="footer-middle">
+    <div class="container">
+      <div class="row">
+
+        <div class="col-6 col-md-4">
+          <!--Column1-->
+          <div class="footer-pad">
+            <h4>Sobre</h4>
+            <ul class="list-unstyled">
+              <li><a href="#"></a></li>
+              <li><a href="about.html">TerraMA²</a></li>
+              <li><a href="team.html">Equipe</a></li>
+              <li><a href="architecture.html">Arquitetura</a></li>
+              <li><a href="contact.html">Contato</a></li>
+            </ul>
+          </div>
         </div>
-      </div>
-      <div class="footer-middle">
-        <div class="container">
-          <div class="row">
+        <div class="col-6 col-md-4">
+          <!--Column1-->
+          <div class="footer-pad">
+            <h4>Projetos</h4>
+            <ul class="list-unstyled">
+              <li><a href="#"></a></li>
+              <li><a href="projects.html">Projetos</a></li>
+              <li><a href="#" data-toggle="tooltip" data-placement="left" title="Em Breve!">Estudos de Caso</a></li>
+            </ul>
+          </div>
 
-            <div class="col-6 col-md-4">
-              <!--Column1-->
-              <div class="footer-pad">
-                <h4>Sobre</h4>
-                <ul class="list-unstyled">
-                  <li><a href="#"></a></li>
-                  <li><a href="about.html">TerraMA²</a></li>
-                  <li><a href="team.html">Equipe</a></li>
-                  <li><a href="architecture.html">Arquitetura</a></li>
-                  <li><a href="contact.html">Contato</a></li>
-                </ul>
-              </div>
-            </div>
-            <div class="col-6 col-md-4">
-              <!--Column1-->
-              <div class="footer-pad">
-                <h4>Projetos</h4>
-                <ul class="list-unstyled">
-                  <li><a href="#"></a></li>
-                  <li><a href="projects.html">Projetos</a></li>
-                  <li><a href="#" data-toggle="tooltip" data-placement="left" title="Em Breve!">Estudos de Caso</a></li>
-                </ul>
-              </div>
-
-              <div class="footer-pad">
-                <ul class="list-unstyled">
-                  <li><a href="#"></a></li>
-                  <li><a href="download.html">Download</a></li>
-                  <li><a href="documentation.html">Documentação</a></li>
-                  <li><a href="courses.html">Cursos</a></li>
-                </ul>
-              </div>
-            </div>
-            <div class="col-6 col-md-4">
-              <!--Column1-->
-              <div class="footer-pad">
-                <h4>Endereço</h4>
-
-                <p>Avenida dos Astronautas, 1.758 Jardim da Granja CEP: 12227 010 São José dos Campos - SP</p>
-              </div>
-              <div class="footer-pad">
-                <div class="mx-auto" style="width: 200px;">
-                  <a href="http://www.inpe.br/" target="_blank"><img src="img/logo-inpe.png" width="50" height="40" class="rounded mx-auto d-block" alt="Logotipo do INPE"></a>
-                </div>
-              </div>
-            </div>
-          </div> 
+          <div class="footer-pad">
+            <ul class="list-unstyled">
+              <li><a href="#"></a></li>
+              <li><a href="download.html">Download</a></li>
+              <li><a href="documentation.html">Documentação</a></li>
+              <li><a href="courses.html">Cursos</a></li>
+            </ul>
+          </div>
         </div>
+        <div class="col-6 col-md-4">
+          <!--Column1-->
+          <div class="footer-pad">
+            <h4>Endereço</h4>
 
-      </div>
-      <div class="footer-bottom">
-        <div class="container">
-          <div class="row">
-            <div class="col-xs-12">
-              <!--Footer Bottom-->
-              <p>&copy; Copyright 2017 TerraMA².  All rights reserved.</p>
-
+            <p>Avenida dos Astronautas, 1.758 Jardim da Granja CEP: 12227 010 São José dos Campos - SP</p>
+          </div>
+          <div class="footer-pad">
+            <div class="mx-auto" style="width: 200px;">
+              <a href="http://www.inpe.br/" target="_blank"><img src="img/logo-inpe.png" width="50" height="40" class="rounded mx-auto d-block" alt="Logotipo do INPE"></a>
             </div>
           </div>
         </div>
+      </div> 
+    </div>
+
+  </div>
+  <div class="footer-bottom">
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12">
+          <!--Footer Bottom-->
+          <p>&copy; Copyright 2017 TerraMA².  All rights reserved.</p>
+
+        </div>
       </div>
-    </footer>
-    <!-- /.Footer -->
+    </div>
+  </div>
+</footer>
+<!-- /.Footer -->
 
-    <!-- Gov -->
-    <script defer="defer" src="//barra.brasil.gov.br/barra.js" type="text/javascript"></script>
-    <!-- /.Gov -->
+<!-- Gov -->
+<script defer="defer" src="//barra.brasil.gov.br/barra.js" type="text/javascript"></script>
+<!-- /.Gov -->
 
-    <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/popper/popper.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+<!-- Bootstrap core JavaScript -->
+<script src="vendor/jquery/jquery.min.js"></script>
+<script src="vendor/popper/popper.min.js"></script>
+<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
 
-    <!-- Script tooltip -->
-    <script>
-      $(document).ready(function(){
-        $('[data-toggle="tooltip"]').tooltip();   
-      });
-    </script>
+<!-- Script tooltip -->
+<script>
+  $(document).ready(function(){
+    $('[data-toggle="tooltip"]').tooltip();   
+  });
+</script>
 
-  </body>
-  </html>
+</body>
+</html>
