updating files cont

--- a/download-v2.html
+++ b/download-v2.html
@@ -133,14 +133,15 @@
                 <div class="container">
                   <div class="row">
                     <div class="col">
-                      <img src="img/win-icon.png" class="rounded mx-auto d-block" alt="..." width="100" height="70">
+                      <a href=""><img src="img/win-icon.png" class="rounded mx-auto d-block" alt="..." width="100" height="70"></a>
                     </div>
                     <div class="col">
                       <!-- <img src="img/linux-icon.png" class="rounded mx-auto d-block" alt="..." width="100" height="70"> -->
-                      <ul>
-                        <li>Versão Recomendada: <a href="">A </a></li>
+                      <!-- <ul>
+                        <li>Versão Recomendada: <a href="">64bits </a></li>
                         <li>Versão Corrente: <a href="">B</a> </li>
-                      </ul>
+                      </ul> -->
+                      <img src="img/linux-icon.png" class="rounded mx-auto d-block" alt="..." width="100" height="70">
                     </div>
                     <!-- <div class="col-sm">
                       <img src="img/pdf-icon.png" class="rounded mx-auto d-block" alt="...">
@@ -166,7 +167,7 @@
         </div> -->
       </div><br><br>
 
-      <div class="container">
+     <!--  <div class="container">
           <div class="col-md-auto">
             <div class="card">
               <div class="card-body">
@@ -178,33 +179,67 @@
                     </div>
                     <div class="col">
                       <!-- <img src="img/linux-icon.png" class="rounded mx-auto d-block" alt="..." width="100" height="70"> -->
-                      <ul>
-                        <li>Versão Recomendada: <a href="">X </a></li>
+                     <!--  <ul>
+                        <li>Versão Recomendada: <a href="http://www.dpi.inpe.br/terrama2/lib/exe/fetch.php?media=download:linux:terrama2-4.0.0-rc2-linux-x64-ubuntu-16.04.deb">64bits </a></li>
                         <li>Versão Corrente: <a href="">Y</a> </li>
                       </ul>
-                    </div>
+                    </div> -->
                     <!-- <div class="col-sm">
                       <img src="img/pdf-icon.png" class="rounded mx-auto d-block" alt="...">
                     </div> -->
-                  </div>
+        <!--           </div>
                 </div>
-
+ -->
                 <!-- <h4 class="card-title">Special title treatment</h4>
                 <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
                 <a href="#" class="btn btn-primary">Go somewhere</a> -->
 
+              <!-- </div>
+            </div>
+          </div>
+      </div>  -->
+    </div>
+
+    <div class="container">
+
+      <div class="mb-4" id="accordion02" role="tablist" aria-multiselectable="true">
+        <div class="card">
+          <div class="card-header" role="tab" id="headingTw">
+            <h5 class="mb-0">
+              <a data-toggle="collapse" data-parent="#accordion02" href="#collapseTw" aria-expanded="true" aria-controls="collapseTw">Windows</a>
+            </h5>
+          </div>
+
+          <div id="collapseTw" class="collapse show" role="tabpanel" aria-labelledby="headingTw">
+            <div class="card">
+              <div class="card-body">
+                <p>teste</p>
               </div>
             </div>
           </div>
+        </div>
       </div>
-    </div>
 
+      <div class="mb-4" id="accordion02" role="tablist" aria-multiselectable="true">
+        <div class="card">
+          <div class="card-header" role="tab" id="headingTw">
+            <h5 class="mb-0">
+              <a data-toggle="collapse" data-parent="#accordion02" href="#collapseTw" aria-expanded="true" aria-controls="collapseTw">linux</a>
+            </h5>
+          </div>
 
+          <div id="collapseTw" class="collapse show" role="tabpanel" aria-labelledby="headingTw">
+            <div class="card">
+              <div class="card-body">
+                <p>teste</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
+</div>
 
-
-  </div>
-  <!-- /.Container -->
 
   <!-- Footer -->
   <footer class="mainfooter">
