adding new page

--- a/about.html
+++ b/about.html
@@ -94,7 +94,7 @@
                 <div class="dropdown-menu dropdown-menu-left" aria-labelledby="navbarDropdownAbout">
                   <a class="dropdown-item" href="#">Apresentações</a>
                   <a class="dropdown-item" href="#">Manuais</a>
-                  <a class="dropdown-item" href="#">Publicações</a>
+                  <a class="dropdown-item" href="publications.html">Publicações</a>
                   <a class="dropdown-item" href="#">Videos</a>
                 </div>
               </li>
