--- a/publications.html
+++ b/publications.html
@@ -112,20 +112,16 @@
           <li class="breadcrumb-item">
             <a href="index.html">Home</a>
           </li>
-          <li class="breadcrumb-item active">Documentação</li>
+          <li class="breadcrumb-item active">Publicações</li>
         </ol>
 
-        <h4>Documentos do Usuário</h4>
-        <div class="bs-callout bs-callout-warning">
-          <p><a href="docs/download/manual_instalacao_terrama2_rc1.pdf" target="_blank">Manual de Instalação do TerraMA²</a><br>
-           <a href="docs/documentation/02_introducao_terrama2.pdf" target="_blank">Apresentação do Sistema</a>
-         </p>
-       </div>
+        <h4>Publicações</h4>
+
 
        <table class="table table-hover">
         <thead>
           <tr>
-            <th>Publicações</th>
+            <th></th>
             <th>Em Português</th>
             <th>Em Inglês</th>
           </tr>
@@ -180,43 +176,6 @@
               </tr>
             </tbody>
           </table><br>
-
-          <!-- Collapse -->
-          <div class="mb-4" id="accordion" role="tablist" aria-multiselectable="true">
-
-            <div class="card">
-              <div class="card-header" role="tab" id="headingTwo">
-                <h5 class="mb-0">
-                  <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Logomarcas TerraMA²
-                  </a>
-                </h5>
-              </div>
-              <div id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="headingTwo">
-                <div class="card-body">
-                  <a href="docs/logomarcas/terrama2_logo_100dpi.png" target="_blank">terrama2_logo_100dpi.png</a><br> 
-                  <a href="docs/logomarcas/terrama2_logo_300dpi.png" target="_blank">terrama2_logo_300dpi.png</a><br>
-                  <a href="docs/logomarcas/terrama2_logo_500dpi.png" target="_blank">terrama2_logo_500dpi.png</a><br>
-                  <a href="docs/logomarcas/powerbyterrama2_logo0.png" target="_blank">powerbyterrama2_logo0.png</a><br>
-                  <a href="docs/logomarcas/powerbyterrama2_logo1.png" target="_blank">powerbyterrama2_logo1.png</a><br>
-                  <a href="docs/logomarcas/powerbyterrama2_logo2.png" target="_blank">powerbyterrama2_logo2.png</a><br>
-                  <a href="docs/logomarcas/powerbyterrama2_logo3.png" target="_blank">powerbyterrama2_logo3.png</a><br>
-                  <a href="docs/logomarcas/powerbyterrama2_logo4.png" target="_blank">powerbyterrama2_logo4.png</a><br>
-                  <a href="docs/logomarcas/powerbyterrama2_logo5.png" target="_blank">powerbyterrama2_logo5.png</a><br>
-                  <a href="docs/logomarcas/terrama2_logoexeng_100dpi.png" target="_blank">terrama2_logoexport_100dpi.png</a><br>
-                  <a href="docs/logomarcas/terrama2_logoexeng_300dpi.png" target="_blank">terrama2_logoexport_300dpi.png</a><br>
-                  <a href="docs/logomarcas/terrama2_logoexeng_500dpi.png" target="_blank">terrama2_logoexport_500dpi.png</a><br>
-                  <a href="docs/logomarcas/terrama2_logoexport_100dpi.png" target="_blank">terrama2_logoexeng_100dpi.png</a><br>
-                  <a href="docs/logomarcas/terrama2_logoexport_300dpi.png" target="_blank">terrama2_logoexeng_300dpi.png</a><br>
-                  <a href="docs/logomarcas/terrama2_logoexport_500dpi.png" target="_blank">terrama2_logoexeng_500dpi.png</a><br>
-                  <a href="docs/logomarcas/terrama2_logoexspan_100dpi.png" target="_blank">terrama2_logoexspan_100dpi.png</a><br>
-                  <a href="docs/logomarcas/terrama2_logoexspan_300dpi.png" target="_blank">terrama2_logoexspan_300dpi.png</a><br>
-                  <a href="docs/logomarcas/terrama2_logoexspan_500dpi.png" target="_blank">terrama2_logoexspan_500dpi.png</a><br>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- /.Collapse -->
-
         </div>
         <!-- /.Container -->
 
